--- a/src/app/features/administration/components/tickets/mass-document-dispatch/mass-document-dispatch.component.html
+++ b/src/app/features/administration/components/tickets/mass-document-dispatch/mass-document-dispatch.component.html
@@ -28,7 +28,7 @@
           <input
             type="text"
             class="form-control"
-            placeholder="Search by policy no"
+            placeholder="Search by client name"
             aria-label="search"
             aria-describedby="search"
             (input)="filterDocs($event)"
@@ -44,7 +44,7 @@
 
       <div class="col-sm-12 col-md-6 d-flex justify-content-end">
         <button
-          class="btn btn-primary" style="font-size: 12px;" (click)="openDocDispatchModal()">Dispatch documents
+          class="btn btn-primary" style="font-size: 12px;" (click)="openDocConfirmModal()">Dispatch documents
 
         </button>
 
@@ -53,23 +53,23 @@
     <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
     <p-table
       #dispatchDocsTable
-      [autoLayout]="true"
+      (onLazyLoad)="lazyLoadTickets($event)"
+      [lazy]="true"
+      [value]="springTickets.content"
+      [(selection)]="selectedSpringTickets"
+      [tableStyle]="{ 'min-width': '50rem' }"
+      [paginator]="true"
+      [rows]="10"
       [rowHover]="true"
-      [resizableColumns]="true"
-      [showCurrentPageReport]="true"
-      [rows]="pageSize || 5"
-      [totalRecords]="dispatchedDocs?.length"
-      [value]="dispatchedDocs"
+      [autoLayout]="true"
+      [totalRecords]="springTickets.totalElements"
       [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
-      responsiveLayout="stack"
-      [scrollable]="true"
-      [(selection)]="selectedDoc"
-      selectionMode="single"
-      dataKey="code"
-      scrollHeight="400px"
       currentPageReportTemplate="{first} - {last} of {totalRecords}"
-      [globalFilterFields]="['pol_policy_no']"
-      [sortField]="'is_authorized'" [sortOrder]="1"
+      [scrollable]="true"
+      scrollHeight="400px"
+      responsiveLayout="scroll"
+      [resizableColumns]="true"
+      [globalFilterFields]="['clientName']"
     >
 
       <ng-template pTemplate="header">
@@ -90,12 +90,19 @@
           <td>
             <p-tableCheckbox [value]="doc"></p-tableCheckbox>
           </td>
-          <td></td>
-          <td>{{doc.pol_policy_no}}</td>
-          <td>{{doc.geds_prepared_date}}</td>
-          <td>{{doc?.etr_trans_type}}</td>
-          <td></td>
-          <td>{{doc?.is_authorized}}</td>
+          <td>{{doc?.clientName}}</td>
+          <td>
+            {{ doc?.ticket?.sysModule === 'Q' ? doc?.ticket.quotationNo :
+              doc?.ticket.sysModule === 'C' ? doc?.ticket.claimNo :
+                doc?.ticket.sysModule === 'P' ? doc?.ticket.policyNo : ''
+                === '' ? doc?.ticket.policyNo : '' }}
+          </td>
+          <td>{{doc.ticket.date | date: 'shortDate'}}</td>
+          <td>{{doc?.ticket?.endorsment}}</td>
+          <td>{{doc?.ticket?.endorsmentCode}}</td>
+          <td (click)="getReportsToPrepare(doc)">
+            <i class="fa-regular fa-eye" style="font-size: 17px;"></i>
+          </td>
         </tr>
       </ng-template>
       <ng-template pTemplate="emptymessage">
@@ -119,18 +126,6 @@
         <div class="col-12 mb-3">
           <form [formGroup]="docDispatchForm">
 
-            <div>
-              <label for="dispatchDocuments" class="form-label w-100">Dispatch documents?</label><br>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" formControlName="dispatchDocuments" id="dispatchDocuments" value="Y">
-                <label class="form-label" for="dispatchDocuments">Yes</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" formControlName="dispatchDocuments" id="dispatchDocuments" value="N">
-                <label class="form-label" for="dispatchDocuments">No</label>
-              </div>
-            </div>
-            <div *ngIf="docDispatchForm.get('dispatchDocuments').value === 'Y'">
               <label class="form-label w-100">Documents to dispatch</label><br>
 
               <p-multiSelect
@@ -149,41 +144,39 @@
                   </div>
                 </ng-template>
               </p-multiSelect>
-            </div>
-            <div *ngIf="docDispatchForm.get('dispatchDocuments').value === 'N'">
-              <label for="dispatchDocuments" class="form-label w-100">Reason for rejection</label><br>
-
-              <p-dropdown
-                [options]="dispatchReasonsData"
-                optionLabel="description"
-                optionValue="description"
-                [filter]="true"
-                filterBy="description"
-                [showClear]="true"
-                [style]="{ 'width': '100%', 'height': '40px' }"
-                placeholder="Select reason"
-                formControlName="rejectionDescription"
-              >
-                <ng-template let-shortDescription pTemplate="item">
-                  <div title="{{shortDescription.description}}">
-                    {{ shortDescription.description.length > 10 ? shortDescription.description.substring(0, 28) + '...' : shortDescription.description }}
-                  </div>
-                </ng-template>
-              </p-dropdown>
-            </div>
           </form>
         </div>
       </div>
       <div class="modal-footer">
-        <button class="btn btn-outline-primary" (click)="saveDispatchRejection()" [disabled]="isLoading" *ngIf="docDispatchForm.get('dispatchDocuments').value === 'N'">
-          <span *ngIf="!isLoading; else loading">Save</span>
+        <button class="btn btn-primary" (click)="prepareDocuments()" [disabled]="isLoading" >
+          <span *ngIf="!isLoading; else loading">Dispatch</span>
           <ng-template #loading>
             <i class="pi pi-spin pi-spinner text-white" style="font-size: 2rem"></i>
           </ng-template>
         </button>
-        <button class="btn btn-primary" (click)="prepareDocuments()" [disabled]="isLoading" *ngIf="docDispatchForm.get('dispatchDocuments').value === 'Y'">
-          <span *ngIf="!isLoading; else loading">Dispatch</span>
-          <ng-template #loading>
+      </div>
+    </div>
+  </div>
+</div>
+<!--DOC Confirm modal-->
+<div class="modal fade" id="docConfirmToggle" aria-hidden="true" aria-labelledby="docConfirmToggleLabel" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered" style="width: 350px">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-6 text-primary" id="docConfirmToggleLabel">Dispatch Documents</h1>
+        <button type="button" class="btn-close" (click)="closeDocConfirmModal()"></button>
+      </div>
+      <div class="modal-body">
+        <div class="col-12 mb-3">
+          <p class="text-black">Are you sure you want to dispatch document(s)?</p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-outline-primary" (click)="closeDocConfirmModal()">Close</button>
+
+        <button class="btn btn-primary" (click)="onSave()" [disabled]="isLoadingDispatch" >
+          <span *ngIf="!isLoadingDispatch; else loadingDispatch">Dispatch</span>
+          <ng-template #loadingDispatch>
             <i class="pi pi-spin pi-spinner text-white" style="font-size: 2rem"></i>
           </ng-template>
         </button>
