--- a/src/app/features/entities/components/entity/view-entity/entity-basic-info/entity-basic-info.component.html
+++ b/src/app/features/entities/components/entity/view-entity/entity-basic-info/entity-basic-info.component.html
@@ -12,6 +12,7 @@
                 <h5>{{ entityPartyIdDetails?.name | titlecase }}</h5>
                 <ng-container *ngFor="let role of entityAccountIdDetails">
                   <button
+                    id="select-party-type-role"
                     class="btn btn-sm"
                     [ngClass]="{
                       'btn-primary': partyAccountDetails?.partyType?.id === role?.partyType?.id,
@@ -138,7 +139,7 @@
       <div class="modal-body">
         <ng-container *ngFor="let role of unAssignedPartyTypes">
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" (click)="onAssignRole(role)">
+            <input id="assign-role" class="form-check-input" type="radio" (click)="onAssignRole(role)">
             <label class="form-check-label">
               {{ role?.partyTypeName }}
             </label>
