--- a/src/app/features/entities/components/entity/view-entity/entity-other-details/entity-other-details.component.html
+++ b/src/app/features/entities/components/entity/view-entity/entity-other-details/entity-other-details.component.html
@@ -60,7 +60,7 @@
       </div>
   </p-tabPanel>
 
-    <p-tabPanel header="Bank Details" (click)="getPaymentDetails()">
+    <p-tabPanel id="get-payment-details" header="Bank Details" (click)="getPaymentDetails()">
         <div class="row">
             <div class="col-sm-3">
                 <table class="table table-borderless">
@@ -103,7 +103,7 @@
         </div>
     </p-tabPanel>
 
-    <p-tabPanel header="Wealth Details" *ngIf="wealthAmlDetails" (click)="getWealthAmlDetails()" >
+    <p-tabPanel id="get-wealth-aml-details" header="Wealth Details" *ngIf="wealthAmlDetails" (click)="getWealthAmlDetails()" >
         <div class="row">
             <div class="col-sm-3">
                 <table class="table table-borderless">
