Modify tables and modals

--- a/src/app/features/lms/grp/components/quotation/components/client-creation/client-creation.component.css
+++ b/src/app/features/lms/grp/components/quotation/components/client-creation/client-creation.component.css
@@ -230,6 +230,18 @@ td {
   padding: 2px;
 }
 
+/* overlay popup*/
+.action-buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.button-wrapper {
+  width: 100%;
+}
+/* overlay popup*/
+
 
 @media screen and (max-width: 768px) {
   .container {
