--- a/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.html
@@ -25,7 +25,7 @@
                   <div class="modal-content">
                     <div class="modal-header">
                       <h5 class="modal-title" id="detailedModalLabel">Capture detailed Cover type details</h5>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="closeDetailedModal()"></button>
+                      <button type="button" class="custom-red-button" data-bs-dismiss="modal" aria-label="Close" (click)="closeDetailedModal()"></button>
                     </div>
                     <div class="modal-body">
                     <form [formGroup]="detailedCovDetsForm">
@@ -494,7 +494,7 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <h5 class="modal-title" id="categoryDetsModal">Capture category details</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+                  <button type="button" class="custom-red-button" data-bs-dismiss="modal" aria-label="Close"
                   (click)="closeCategoryDetstModal()"></button>
                 </div>
                 <div class="modal-body">
@@ -742,11 +742,11 @@
                    <!-- modal to capture member details -->
                    <div class="modal fade" tabindex="-1" #detailedModal id="addMemberModal" aria-labelledby="addMemberModalLabel" aria-hidden="true"
                    style="color: #333;">
-                     <div class="modal-dialog">
+                     <div class="modal-dialog modal-lg">
                        <div class="modal-content">
                          <div class="modal-header">
                            <h5 class="modal-title" id="addMemberModalLabel">Member details</h5>
-                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+                           <button type="button" class="custom-red-button" data-bs-dismiss="modal" aria-label="Close"
                            (click)="closeAddMemberDetailsModal()"></button>
                          </div>
                          <div class="modal-body">
