--- a/src/app/features/lms/grp/components/reinsurance/components/summary/summary.component.html
+++ b/src/app/features/lms/grp/components/reinsurance/components/summary/summary.component.html
@@ -427,9 +427,8 @@
 
 
     </div>
-</div>
-<div style="display: flex; justify-content: space-between;
-padding-top: 12px; padding-right: 35px; padding-left: 35px;">
+    <div style="display: flex; justify-content: space-between;
+padding-top: 12px; padding-left: auto;">
     <button class="back-button" (click)="back()">
         <span class="back-text">
             Back
@@ -442,6 +441,7 @@ padding-top: 12px; padding-right: 35px; padding-left: 35px;">
             Complete reinsurance
         </span>
     </button>
+</div>
 </div>
 
 <!-- modals  -->
