--- a/src/app/features/lms/grp/components/reinsurance/components/reinsurance-listing/reinsurance-listing.component.css
+++ b/src/app/features/lms/grp/components/reinsurance/components/reinsurance-listing/reinsurance-listing.component.css
@@ -92,7 +92,7 @@ p-multiSelect {
 
     .p-datatable-thead {
         border-radius: 4px 0px 0px 0px;
-        background: #BAD0E4;
+        background-color: #579cdc;
     }
 }
 
@@ -116,4 +116,26 @@ p-multiSelect {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+}
+
+@media screen and (max-width: 767px) {
+    .container {
+        width: 100%;
+        max-width: none;
+        height: auto;
+    }
+    
+    .main {
+        padding: 10px;
+    }
+
+    .form {
+        position: relative;
+        width: 100%;
+        margin-left: auto;
+        display: flex;
+        align-items: center;
+    }
+
+    
 }
