--- a/src/app/features/lms/grp/components/reinsurance/components/summary/summary.component.css
+++ b/src/app/features/lms/grp/components/reinsurance/components/summary/summary.component.css
@@ -1,12 +1,16 @@
 .container {
     width: 1216px;
     max-height: 2000%;
-    flex-shrink: 0;
-    background: #FFF;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: space-between;
+    padding: 0 20px;
 }
 
 .main {
     padding: 0 48px 0 48px;
+    background: #FFF;
 }
 
 .finish-button {
@@ -241,7 +245,7 @@ p-multiSelect {
 }
 
 .accordion-style {
-    padding-top: 63px; 
+    padding-top: 63px;
     width: 932px;
 }
 
@@ -366,9 +370,6 @@ td {
     -ms-overflow-style: none;
 }
 
-.stepper {
-    background-color: #F5F6F8;
-}
 
 #table-align {
     padding-left: 10px;
@@ -376,8 +377,8 @@ td {
 
 @media screen and (max-width: 800px) {
     .container {
-      width: 100%;
-      max-height: 3000px;
+        width: 100%;
+        max-height: 100%;
     }
 
     .form-select {
@@ -393,10 +394,15 @@ td {
     }
 }
 
-@media screen and (min-width: 801px) and (max-width: 1200px) {
+@media screen and (max-width: 1200px) {
     .container {
-      width: 100%;
-      max-height: 2000px;
+        width: 100%;
+        max-height: 100%;
+        padding: 0 10px;
+    }
+
+    .main {
+        padding: 0 10px;
     }
 
     .form-select {
