VQ-1824:Ability to Capture Risk Other details - Territory

--- a/src/app/features/gis/components/policy/components/policy-product/policy-product.component.html
+++ b/src/app/features/gis/components/policy/components/policy-product/policy-product.component.html
@@ -1,5 +1,7 @@
 <div class="container ">
     <p class="titleMain mt-3">{{'gis.policy.underwriting_product_details' | translate}}</p>
+    <app-stepper [currentStep]="1" [stepperData]="steps"></app-stepper>
+
     <div class="container mx-2 mt-n1">
         <div class="card mb-3 px-2" style=" position: relative;">
             <div class="card-body">
